fixed navbar jumpyness when using jquery
if jquery is added to the page then the fixed nav would jump a bit as you scrolled up/down

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -16,6 +16,7 @@
     border-top: 1px solid #dedede;
     border-bottom: 1px solid #dedede;
     background-color: white;
+    -webkit-transform: translateZ(0);
 }
 .nav-container{
     display: -webkit-box;
